# Copyright (c) 2013-2019 Intel, Inc.  All rights reserved.
# Copyright (c) 2016      Research Organization for Information Science
#                         and Technology (RIST). All rights reserved.
# Copyright (c) 2006-2020 Cisco Systems, Inc.  All rights reserved
# Copyright (c) 2004-2006 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2010      Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010      Oracle and/or its affiliates.  All rights
#                         reserved.
# Copyright (c) 2016      Intel, Inc. All rights reserved.
# Copyright (c) 2021      Nanook Consulting.  All rights reserved.
# Copyright (c) 2021      IBM Corporation.  All rights reserved.
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

EXTRA_DIST = \
	pmix_get_version.sh \
	distscript.sh \
	getdate.sh \
    pmix_check_alps.m4 \
	pmix_check_attributes.m4 \
    pmix_check_cflags.m4 \
	pmix_check_compiler_version.m4 \
    pmix_check_curl.m4 \
    pmix_check_cython.py \
	pmix_check_icc.m4 \
	pmix_check_ident.m4 \
    pmix_check_jansson.m4 \
    pmix_check_lustre.m4 \
    pmix_check_ofi.m4 \
    pmix_check_os_flavors.m4 \
	pmix_check_package.m4 \
    pmix_check_pthread_pids.m4 \
    pmix_check_slurm.m4 \
    pmix_check_tm.m4 \
	pmix_check_vendor.m4 \
	pmix_check_visibility.m4 \
    pmix_check_withdir.m4 \
    pmix_config_asm.m4 \
    pmix_config_pthreads.m4 \
    pmix_config_subdir_args.m4 \
	pmix_config_subdir.m4 \
    pmix_config_threads.m4 \
	pmix_ensure_contains_optflags.m4 \
	pmix_functions.m4 \
    pmix_get_version.sh \
    pmix_load_platform.m4 \
	pmix_mca_priority_sort.pl \
    pmix_mca.m4 \
	pmix_search_libs.m4 \
    pmix_set_mca_prefix.m4 \
	pmix_setup_cc.m4 \
	pmix_setup_cli.m4 \
	pmix_setup_hwloc.m4 \
	pmix_setup_libev.m4 \
	pmix_setup_libevent.m4 \
	pmix_setup_wrappers.m4 \
	pmix_try_assemble.m4 \
	pmix.m4 \
	mca_library_paths.txt \
    from-savannah/upstream-config.guess \
    from-savannah/upstream-config.sub \
	ltmain_pgi_tp.diff \
	ltmain_nag_pthread.diff
